--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,7 @@
 }
 
 :root{
-    --blue: linear-gradient(-45deg,
-            rgba(59, 173, 227, 1) 0%,
-            rgba(87, 111, 230, 1) 25%,
-            rgba(152, 68, 183, 1) 51%,
-            rgba(255, 53, 127, 1) 100%);
+    --blue: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 70%, rgba(0, 6, 36, 1) 100%);
 }
 
 /* bg */
